Blackpurl/src/objects/User_Group__c.object
<CustomObject>
    <description>This object have children -user ( all  user govern by groups on them )</description>
    <fields>
        <fullName>Accounting_settings_export__c</fullName>
        <label>Accounting settings &amp; export</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backdating__c</fullName>
        <description>A new permission called “Backdating”</description>
        <label>Backdating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_reconciliation__c</fullName>
        <label>Cash reconciliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colour_Code__c</fullName>
        <label>Colour Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costs__c</fullName>
        <label>Costs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_invoicing__c</fullName>
        <label>Customer invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Service__c</fullName>
        <label>Internal Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_System_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is System Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_job_clocking__c</fullName>
        <label>Manage job clocking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manage_payroll_clocking__c</fullName>
        <label>Manage payroll clocking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_price__c</fullName>
        <label>Override price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oversell_inventory__c</fullName>
        <label>Oversell inventory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Levels__c</fullName>
        <label>Price Levels</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_file_import__c</fullName>
        <label>Price file import</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Returns__c</fullName>
        <label>Returns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Taxes__c</fullName>
        <label>Sales Taxes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_job__c</fullName>
        <label>Service job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Set_cash_drawer__c</fullName>
        <label>Set cash drawer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_order__c</fullName>
        <label>Special order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Settings__c</fullName>
        <label>System Settings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_ordering__c</fullName>
        <label>Unit ordering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_invoicing__c</fullName>
        <label>Vendor invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_order__c</fullName>
        <label>Vendor order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_receiving__c</fullName>
        <label>Vendor receiving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>customers__c</fullName>
        <label>customers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fees__c</fullName>
        <label>fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kits__c</fullName>
        <label>kits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>labor__c</fullName>
        <label>labor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parts__c</fullName>
        <label>parts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quick_sale__c</fullName>
        <label>quick sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stock_units__c</fullName>
        <label>stock units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vendor_products__c</fullName>
        <label>vendor products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vendors__c</fullName>
        <label>vendors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>